deployment/go-server/patch-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: server
spec:
  selector:
    matchLabels:
      app: go-server
  template:
    metadata:
      labels:
        app: go-server
    spec:
      volumes:
        - name: server-certs
          secret:
            secretName: go-server-tls
