deployment/go-server/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: go-server-service
  namespace: default
spec:
  selector:
    app: go-server
  ports:
    - port: 80
      targetPort: 8080
  type: ClusterIP
