deployment/go-server/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: go-server-ingress
  namespace: default
spec:
  tls:
    - hosts:
        - go.squishmeist.com
      secretName: go-server-tls
  rules:
    - host: go.squishmeist.com
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: go-server-service
                port:
                  number: 80
