deployment/go-server/patch-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: server-ingress
spec:
  tls:
    - secretName: go-server-tls
      hosts:
        - go.squishmeist.com
  rules:
    - host: go.squishmeist.com
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: server-service
                port:
                  number: 80
